# corona-digital-cx

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  pytest.ini
.github/workflows/: release.yml
config/: build.yaml
config/templates/: cover.html  pdf_style.css  release_notes.md  web_style.css
docs/: ARCHITECTURE.md  INSTALL_DEPENDENCIES.md  LICENSE-CC-BY-SA-4.0.md  QUICKSTART.md
docs/project/: CONTRIBUTING.md  VERSION-MANAGEMENT.md
docs/sections/03-bacnet-network-infrastructure/: 01-overview.md  03-ip-addressing.md  04-network-numbering.md  05-device-instance-numbers.md  07-mstp-arc156-properties.md
docs/sections/04-metadata-validation/: 02-level-1-naming-convention.md  03-level-2-tagging-labeling.md
scripts/: build.sh  install.sh
src/builder/: __init__.py  cli.py  config.py  markdown_processor.py  pdf_generator.py  release_manager.py
src/utils/: __init__.py  logging.py
standard/sections/00-frontmatter/: 01-document-metadata.md
standard/sections/01-introduction/: 01-purpose-and-scope.md
standard/sections/04-metadata-validation/: 01-overview.md  (+3 more)
templates/: README.md
templates/section-templates/: 00-section-overview.md
templates/subsection-templates/: 01-subsection-requirements.md
tests/: __init__.py  conftest.py
tests/docs/: IMPLEMENTATION_GUIDE.md  TEST_README.md  TEST_REPORT.md
tests/integration/: test_build_workflow.py  test_error_handling.py  test_release_automation.py  test_requirements_validation.py
tests/unit/: test_config.py  test_git_operations.py  test_markdown_discovery.py  test_pdf_generation.py
(+24 files in other folders)
